fix: align dropdown menu to right on mobile view

--- a/src/heads.css
+++ b/src/heads.css
@@ -52,7 +52,7 @@
     top: -500px; 
     right: 30px;
     left: auto;
-    height: 45vh;
+    height: 65vh;
     text-align: center;
     z-index: 10;
     background-color: #333;
